# fetchcontent_demo

./: CMakeLists.txt  LICENSE
cmake/: spdlog2.cmake
example/: main.cpp
include/: calc.h
src/: calc.cc  main.cc
